tests/baselines/reference/S7.8.3_A6.2_T2.errors.txt
S7.8.3_A6.2_T2.ts(15,3): error TS1125: Hexadecimal digit expected.
S7.8.3_A6.2_T2.ts(15,3): error TS2304: Cannot find name 'g'.


==== S7.8.3_A6.2_T2.ts (2 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    info: 0xG is incorrect
    es5id: 7.8.3_A6.2_T2
    description: Checking if execution of "0xg" fails
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    //CHECK#1
    0xg
      
!!! error TS1125: Hexadecimal digit expected.
      ~
!!! error TS2304: Cannot find name 'g'.
    